production/client/public/styles.css
/*~~~~~~~~~~~~~~~~/
/ Mobile styles  /
/~~~~~~~~~~~~~~~~*/

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: aliceblue;
  /* background: rgb(24,24,24); */
  background: radial-gradient(at 50% 45%, rgba(49, 159, 193, 1) 1%, rgba(24, 24, 24, 1) 99%);
  background-repeat: no-repeat;
  background-attachment: fixed;
  overflow-y: scroll; /* Add the ability to scroll */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}



.wrapper {
  /*This will keep everything where it belongs,*/
  /* even if not everything renders correctly*/
  height: 100%;
  width: 100%;
  position: absolute;
  justify-content: center;
}

h1 {
  font-size: 25pt;
}

h2 {
  font-size: 18pt;
}

a {
  color: inherit;
  text-decoration: inherit;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/*Styles for the sidebar*/
.sidebarClass {
  background-color: rgb(24, 24, 24);
}

.listitemicon {
  color: aliceblue;
}

/* Section division lines for side drawer*/
/* .drawerlist:before {
  content: "";
  position: absolute;
  left:40px;
  bottom:0;
  height:1px;
  width: 70%;
  border-bottom:1px solid black;
} */

#menuclosearrow {
  color: aliceblue;
  font-size: 4vh;
}

/* styles for the logo bar*/
#logo {
  height: 23px;
}

#logobar {
  /* background-image: linear-gradient(rgb(35, 35, 35),rgb(0,0,0)); */
  background-color: rgb(21, 21, 21);
  box-shadow: none;
}

#logobar-containers {
  display: flex;
  flex-direction: column;
  height: 100px;
  padding-top: 5px;
  padding-bottom: 1px;
}

#logobar-left {
  display: flex;
  align-items: center;
}

#logobar-middle {
  display: flex;
  justify-content: center;
  align-items: center;
}

#logobar-right {
  display: flex;
  align-items: center;
  justify-content: right;
}

.logobar-top {
  display: flex;
  width: 100%;
  height: 50%;
  align-items: center;
  justify-content: space-between;
}

.logobar-bottom {
  display: flex;
  width: 100vw;
  height: 50%;
  justify-content: center;
}



#burgerbtn {
  font-size: 3.5vh;
}

#logo-container {
  padding-bottom: 7px;
  text-align: center;
}




#logo-title {
  font-size: 27px;
}

#logo-icon {
  font-size: 30px;
  color: rgb(80, 188, 221);
  margin-bottom: -6px;
  margin-left: -5px;
}


#search-bar {
  display: flex;
  width: 64vw;
  height: 32px;
  border: 1px solid #1b1b1b;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
  border-radius: 15px;
  background-color: #2f2f2f;
}

.search-icon {
  width: 25px;
  height: 18px;
  display: block;
  align-self: center;
}

#search-bar input {
  width: 100%;
  border: none;
  margin: 0px 15px;
  font-size: 14px;
  font-weight: 500;
  color: lightgray;
  background-color: #2f2f2f;
}

#search-bar button {
  font-weight: 500;
  font-size: 14px;
  padding: 0px 15px;
  background-color: #a5a5a5;
  border: none;
  border-radius: 0px 15px 15px 0px;
}


#search-bar input {
  font-size: 16px;
}


#account-username {
  display: none;
}

#acctbtn {
  height: 100%;
  width: 100%;
}


.topic-scroll {
  display: flex;
  flex-direction: column;
  position: fixed;
  background-color: rgb(21, 21, 21);
  width: 100vw;
  bottom: 0;
  padding: 2px 0px 12px;
  z-index: 2;
}


.top-section {
  display: flex;
  flex-direction: row;
  margin-top: 1.5vh;
  margin-bottom: .5vh;
  align-items: center;
  gap: 8vw;
}

.bottom-section {
  display: flex;
  flex-direction: row;
  gap: 50px;
}

.random-search {
  display: flex;
  flex-direction: column;
  align-items: center;
}


/*styles for the video display*/
.video-feed {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
  row-gap: 36px;
  column-gap: 0px;
  margin-top: 150px;
}

.video-card {
  background: linear-gradient(to top, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0.3));
  border-radius: 25px;
  padding: 0px;
  height: 316px;
  /* width: 320px; */
  /* text-align: center;
  justify-content: center; */
  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.35), 
            4px 0px 4px rgba(0, 0, 0, 0.15); */

}

.thumbnail {
  position: relative;
  /* display: flex;
  justify-content: center; */
}

.favorite {
  color: rgb(220, 220, 220);
  font-size: 1.2rem;
  position: absolute;
  cursor: pointer;
  right: 18px;
  bottom: -56px;
}


.video-details {
  padding: 0px 20px 36px 20px;
}

.video-title {
  color: whitesmoke;
  margin-top: -20px;
  margin-bottom: 15px;
  line-height: 1.25;
  font-size: 15px;
  font-weight: 400;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.channel-title {
  color: lightblue;
  font-size: 14px;
}


.player-container {
  background: black;
  max-width: 100%;
  display: flex;
  justify-content: center;
}

.video-player {
  width: 100%;
  margin-top: 0px;
}

/*Styles for WatchVideo */
.watch_player-container {
  background: rgb(8, 8, 8);
  width: 100vw;
  display: flex;
  justify-content: center;
}

.watch_video-player {
  margin-top: 7vh;
  width: 100vw;
  /*     This creates a   */
  height: 56vw;
  /* flexible 16:9 ratio*/
}

.watch_player-details {
  background: rgba(0, 0, 0, 0.1);
  border-bottom: rgba(0, 128, 0, 0.3) 1px solid;
  border-left: rgba(0, 128, 0, 0.5) 1px solid;
  box-shadow: rgba(16, 16, 16, 0.5) 10px 15px 15px;
  border-bottom-left-radius: 60px;
  border-bottom-right-radius: 60px;
  padding: 25px;
  height: 3;
}

/* .video-player {
  margin-top: 8vh;
  width: 54vw;   
  height: 30vw; 
} */

.player-details {
  display: flex;
  flex-direction: column;
  gap: 20px;
  background: rgba(0, 0, 0, 0.3);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  box-shadow: rgba(16, 16, 16, 0.5) 10px 15px 15px;
  padding: 30px;
  height: auto;

}

.player-video-title {
  /* border: 1px yellow solid; */
  padding: 0;
  height: auto;
  border-bottom: 1px rgb(106, 139, 150) solid;
}

.player-video-title h2 {
  font-size: 18px;
  line-height: 1.25;
}

.player-video-channel {
  color: lightblue;
  font-size: 14px;
  margin-bottom: 20px;
}

.player-video-description-container {
  padding: 0px 10px;
}

.player-video-description {
  margin-bottom: 32px;
  color: lightgray;
  line-height: 1.5;
  font-size: 14px;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 10;
  -webkit-box-orient: vertical;
  overflow: hidden;

}



/*Styles for login and sign-up*/
.account-container {
  margin: auto;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: min-content;
  height: min-content;
}

#accountDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
  padding: 60px 50px;
  background: #181818;
  color: aliceblue;
  border-radius: 25px;
}

.account-fields {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.account-textfield {
  background: #1e1e1e;
  border: 1px solid #20444e !important;
  border-radius: 5px;
}


/* these will need to be simplified and targeted via user-defined classes */
.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input:invalid {
  color: aliceblue;
}

.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
  color: aliceblue !important;
}


.MuiTextField-root>.MuiFormLabel-root.Mui-focused {
  color: aliceblue;
}

.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
  color: aliceblue;
}

.MuiTextField-root label {
  color: aliceblue;
}

.MuiTextField-root p {
  color: rgb(219, 225, 231);
}

#submit-btn {
  background-color: rgba(240, 248, 255, 1);
  margin-bottom: 10%;
}

/*About Us page styling*/

#aboutpage{
  margin-top: 130px;
  width:95%;
  margin-left:2.5%;
}

#aboutpage h1 {
  margin-bottom:30px;
}

#aboutpage h2 {
  margin-bottom:10px;
  margin-top:30px;
}

article {
  border: 1px solid aliceblue;
  margin:3%;
  padding:5%;
}

article p{
  margin-bottom:15px;
  line-height:25px;
}

#citation{
  text-align:center;
  font-size:small;
  color:rgba(240, 248, 255, 0.5)
}

.profile-pic{
  height:120px;
  float:left;
  margin-right:15px;
}


/*~~~~~~~~~~~~~~~~/
/ Desktop styles  /
/~~~~~~~~~~~~~~~~*/
@media screen and (min-width:767px) {

  /*Styles for the main body*/
  .video-feed {
    margin: 240px 9%;
    column-gap: 42px;
  }

  /*Styles for the logobar*/

  #logo {
    height: 27px;
  }

  #logo-container {
    padding-bottom: 7px;
    padding-left: 27px;
  }

  #logobar-containers {
    padding: 18px;
    height: 60px;
    display: flex;
    justify-content: center;
    /* padding changed */
  }

  .logobar-bottom {
    margin-top: -36px;
  }

  #burgerbtn {
    font-size: 3vh;
  }

  #account-username {
    display: inline;
  }

  #acctbtn {
    font-size: 3.5vh;
  }


  /*styles for the search */

  #search-bar {
    width: 20vw;
    height: 40px;
    border-radius: 18px;
  }

  #search-bar input {
    font-size: 16px;
  }


  .topic-scroll {
    position: fixed;
    bottom: initial;
    background-color: rgb(21, 21, 21);
    margin-top: 75px;
    padding: 20px 0px;
    width: 100vw;
  }

  .random-search {
    display: flex;
    flex-direction: column;
    align-items: center;
  }



  /*Styles for WatchVideo */
  .watch_player-container {
    background: rgb(8, 8, 8);
    width: 100vw;
    display: flex;
    justify-content: center;
  }

  .watch_video-player {
    margin-top: 7vh;
    width: 54vw;
    /*     This creates a   */
    height: 30vw;
    /*  flexible 16:9 ratio */
  }

  .watch_player-details {
    background: rgba(0, 0, 0, 0.1);
    border-bottom: rgba(0, 128, 0, 0.3) 1px solid;
    border-left: rgba(0, 128, 0, 0.5) 1px solid;
    box-shadow: rgba(16, 16, 16, 0.5) 10px 15px 15px;
    border-bottom-left-radius: 60px;
    border-bottom-right-radius: 60px;
    padding: 25px;
    height: 3;
  }

  .video-player {
    margin-top: 8vh;
    width: 54vw;
    height: 30vw;
  }


  .player-details {
    display: flex;
    flex-direction: column;
    gap: 20px;
    background: rgba(0, 0, 0, 0.3);
    border-bottom-left-radius: 60px;
    border-bottom-right-radius: 60px;
    box-shadow: rgba(16, 16, 16, 0.5) 10px 15px 15px;
    padding: 30px;
    height: auto;

  }

  .player-video-title {
    /* border: 1px yellow solid; */
    padding: 0px 25px;
    height: auto;
    border-bottom: 1px rgb(106, 139, 150) solid;
  }

  .player-video-channel {
    color: lightblue;
    font-size: 14px;
    margin-bottom: 25px;
  }

  .player-video-description-container {
    padding: 0px 80px;
  }

  .player-video-description {
    margin-bottom: 32px;
    color: lightgray;
    line-height: 1.5;
    font-size: 14px;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;

  }

  /*About Us page styling*/

  #aboutpage{
    margin-top: 90px;
    width:80%;
    margin-left:10%;
  }

  #aboutpage h1 {
    margin-bottom:35px;
  }

  #aboutpage h2 {
    margin-top:25px;
  }

  #citation{
    margin-left:70%;
  }


}

